# phase-accumulator-networks

./: LICENSE  Makefile  README.md  pyproject.toml
docs/: pan.md  pan_hypothesis_tracking.md
notebooks/: PAN_experiment_verification.ipynb  PAN_tutorial_notebook.ipynb  pan_validation.ipynb
scripts/: hello_experiment.py  start.sh
src/pan/: __init__.py  cli.py  config.py  constants.py  core.py  data.py  sweep.py  training.py  training_no_wandb.py  utils.py
src/pan/analysis/: checkpoints.py  mechanistic.py
src/pan/data/: __init__.py  modular.py
src/pan/experiments/: __init__.py  compare.py  plots.py  primes.py  runner.py  sweep.py  sweep_k.py  sweeps.py  tier3.py
src/pan/models/: __init__.py  base.py  factory.py  pan.py  transformer.py
src/pan/plotting/: __init__.py
src/pan/training/: config.py  trainer.py
tests/: test_core.py
