[project]
name = "phase-accumulator-networks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "transformer-lens==2.17.0",
  "sae-lens==6.39.0",
  "transformers",
  "datasets",
  "jaxtyping",
  "einops",
  "pandas",
  "numpy",
  "scipy",
  "scikit-learn",
  "matplotlib",
  "plotly",
  "jupyter",
  "ipykernel",
  "tqdm",
  "rich",
  "argparse>=1.4.0",
]

[project.scripts]
pan = "pan.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pan"]

[tool.uv]
package = true

[tool.uv.workspace]
members = [
    "phase-accumulator-networks",
]
