[project]
name = "pan"
version = "0.1.0"
description = "Phase Accumulator Network — sinusoidal phase arithmetic for modular addition"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Jacob Hollenbeck" }]

dependencies = [
    "torch>=2.1",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "rich>=13.0",
    "typer>=0.9",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
pan = "pan.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pan"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
